crates/oxc_react_compiler/tests/snapshots/new-mutability__error.mutate-frozen-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/error.mutate-frozen-value.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("value cannot be modified"), span: Span { start: 99, end: 100 }, primary: false }], help: Some("Modifying a value previously passed as an argument to a hook is not allowed. Consider moving the modification before calling the hook"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
