crates/oxc_react_compiler/tests/snapshots/new-mutability__error.todo-repro-named-function-with-shadowed-local-same-name.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/error.todo-repro-named-function-with-shadowed-local-same-name.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Invariant: [InferMutationAliasingEffects] Expected value kind to be initialized", labels: [LabeledSpan { label: Some("this is uninitialized"), span: Span { start: 211, end: 220 }, primary: false }], help: Some("<unknown> hasErrors_0$15:TFunction"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
